--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/server.js",
   "type": "module",
   "scripts": {
-    "start": "node src/server.js",
+    "start": "node path/to/your/migration_script.js && node src/server.js",
     "dev": "nodemon src/server.js",
     "migrate": "node migrate.js",
     "test": "echo \"Error: no test specified\" && exit 1"
