--- a/.env
+++ b/.env
@@ -9,11 +9,11 @@ UPLOAD_DIR=uploads/
 
 
 
-DB_HOST=mysql-tjc-autosupply.alwaysdata.net
-DB_PORT=3306
-DB_NAME=tjc_autosupply_tjsims_db   
-DB_USER=tjc-autosupply
-DB_PASSWORD=clrnc0000-
+DB_HOST=${{MySQL.MYSQLHOST}}
+DB_PORT=${{MySQL.MYSQLPORT}}
+DB_NAME=${{MySQL.MYSQL_DATABASE}}
+DB_USER=${{MySQL.MYSQLUSER}}
+DB_PASSWORD=${{MySQL.MYSQLPASSWORD}}
 FRONTEND_URL=https://tjc-autosupply.vercel.app
 
 DB_SSL=true
