--- a/.env
+++ b/.env
@@ -3,7 +3,9 @@
 JWT_SECRET=your_super_secret_jwt_key_here
 JWT_EXPIRE=7d
 
-# File Upload Configuration
+
+# File Upload Configuration33333
+# File Upload Configuration33333gi
 MAX_FILE_SIZE=5242880
 UPLOAD_DIR=uploads/
 
@@ -18,3 +20,4 @@ FRONTEND_URL=https://tjc-autosupply.vercel.app
 
 DB_SSL=true
 DB_SSL_REJECT_UNAUTHORIZED=false
+
