--- a/.env
+++ b/.env
@@ -11,11 +11,11 @@ UPLOAD_DIR=uploads/
 
 
 
-DB_HOST=${{MySQL.MYSQLHOST}}
-DB_PORT=${{MySQL.MYSQLPORT}}
-DB_NAME=${{MySQL.MYSQL_DATABASE}}
-DB_USER=${{MySQL.MYSQLUSER}}
-DB_PASSWORD=${{MySQL.MYSQLPASSWORD}}
+DB_HOST=mysql.railway.internal
+DB_PORT=3306
+DB_NAME=railway
+DB_USER=root
+DB_PASSWORD=HbvdfwvenHwCqbTJVHtOcdnUTFOlkdkW
 FRONTEND_URL=https://tjc-autosupply.vercel.app
 
 DB_SSL=true
