--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,19 @@
-# Server Configuration
-PORT=5000
-NODE_ENV=development
-
 # Database Configuration
-DB_HOST=localhost
+
+DB_HOST=mysql.railway.internal
 DB_PORT=3306
-DB_NAME=tjsims_db
+DB_NAME=railway
 DB_USER=root
-DB_PASSWORD=
+DB_PASSWORD=HbvdfwvenHwCqbTJVHtOcdnUTFOlkdkW
+FRONTEND_URL=https://tjc-autosupply.vercel.app
 
-# JWT Configuration
-JWT_SECRET=your_super_secret_jwt_key_here
-JWT_EXPIRE=7d
+# Optional SSL Configuration
+# DB_SSL=false
+# DB_SSL_REJECT_UNAUTHORIZED=true
 
-# File Upload Configuration
-MAX_FILE_SIZE=5242880
-UPLOAD_DIR=uploads/
+# JWT Secret (generate a secure random string)
+JWT_SECRET=your_jwt_secret_key_here
 
-# CORS Configuration
-FRONTEND_URL=http://localhost:5173
+# Server Configuration
+PORT=3000
+NODE_ENV=development
