--- a/.env
+++ b/.env
@@ -11,12 +11,11 @@ UPLOAD_DIR=uploads/
 
 
 
-DB_HOST=mysql.railway.internal
-DB_PORT=3306
-DB_NAME=railway
-DB_USER=root
-DB_PASSWORD=HbvdfwvenHwCqbTJVHtOcdnUTFOlkdkW
-FRONTEND_URL=https://tjc-autosupply.vercel.app
+DB_HOST: mysql-3f25b9e7-tjc-autosupply.d.aivencloud.com
+DB_PORT: 18632
+DB_USER: avnadmin
+DB_PASSWORD: AVNS_Np6DNSkvi7s726eRXAD
+DB_NAME: defaultdb
 
 DB_SSL=true
 DB_SSL_REJECT_UNAUTHORIZED=false
